--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,43 @@
 body{
+  height: 100vh;
   background-color: hsl(233, 47%, 7%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+
+.card{
+  background-color: hsl(244, 38%, 16%);
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
+
+}
+
+.text-container{
+
+}
+
+.title{
+ color: hsl(0, 0%, 100%);
+}
+
+.accent{
+  color: hsl(277, 64%, 61%);
+}
+
+.text{
+color:hsla(0, 0%, 100%, 0.75);
+
+}
+
+.stats{
+color: hsl(0, 0%, 100%);
+}
+.stats-heading{
+  color: hsla(0, 0%, 100%, 0.6);
+}
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
