--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body{
 
 
 .card{
+  width: 70%;
+  height: 50%;
   background-color: hsl(244, 38%, 16%);
   display: grid;
   grid-template-columns: 50% 50%;
@@ -15,12 +17,20 @@ body{
 
 }
 
+.left-half{
+font-family: "Inter", sans-serif;
+
+margin: auto 20% auto 15%;
+
+}
 .text-container{
 
 }
 
 .title{
  color: hsl(0, 0%, 100%);
+ font-weight: 700;
+ font-size: 2.5rem;
 }
 
 .accent{
@@ -29,14 +39,40 @@ body{
 
 .text{
 color:hsla(0, 0%, 100%, 0.75);
+font-weight: 400;
 
 }
 
 .stats{
-color: hsl(0, 0%, 100%);
+
+
 }
-.stats-heading{
+.stats-numbers{
+  color: hsl(0, 0%, 100%);
+  font-weight: 700;
+  font-size: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(3,33%);
+}
+
+.stats p{
+  margin: 0 0;
+
+}
+
+
+.stats-headings{
   color: hsla(0, 0%, 100%, 0.6);
+  font-family: "Lexend Deca", sans-serif;
+  display: grid;
+  grid-template-columns: repeat(3,33%);
+
+}
+
+
+.image{
+  width: 100%;
+  height: 100%;
 }
 
 .attribution { font-size: 11px; text-align: center; }
