Add color filter to image, style borders, center text, position everything, adjust margins

--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,18 @@ body{
   width: 70%;
   height: 50%;
   background-color: hsl(244, 38%, 16%);
+  border-radius: 10px;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 100%;
+  overflow: hidden;
 
 }
 
 .left-half{
 font-family: "Inter", sans-serif;
 
-margin: auto 20% auto 15%;
+margin: 8% 20% auto 12%;
 
 }
 .text-container{
@@ -31,6 +33,8 @@ margin: auto 20% auto 15%;
  color: hsl(0, 0%, 100%);
  font-weight: 700;
  font-size: 2.5rem;
+ margin-bottom: 35px;
+ margin-top: 30px;
 }
 
 .accent{
@@ -40,23 +44,26 @@ margin: auto 20% auto 15%;
 .text{
 color:hsla(0, 0%, 100%, 0.75);
 font-weight: 400;
+font-size: 1.15rem;
+line-height: 1.6;
 
 }
 
 .stats{
+margin-top: 90px;
 
 
 }
 .stats-numbers{
   color: hsl(0, 0%, 100%);
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   display: grid;
   grid-template-columns: repeat(3,33%);
 }
 
 .stats p{
-  margin: 0 0;
+  margin: 2px 0;
 
 }
 
@@ -64,15 +71,29 @@ font-weight: 400;
 .stats-headings{
   color: hsla(0, 0%, 100%, 0.6);
   font-family: "Lexend Deca", sans-serif;
+  font-size: 0.9rem;
   display: grid;
   grid-template-columns: repeat(3,33%);
 
 }
 
-
+.right-half{
+  position: relative;
+}
 .image{
   width: 100%;
   height: 100%;
+  position: absolute;
+
+}
+.img-filter{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: hsla(274, 99%, 35%, 0.5);
+  z-index: 2;
+  position: absolute;
+
 }
 
 .attribution { font-size: 11px; text-align: center; }
